replace space with regular expression

--- a/spgw/dockerfile
+++ b/spgw/dockerfile
@@ -20,12 +20,12 @@ RUN cd RECO/SCRIPTS && ./build_spgw -c
 RUN apt-get install -y iptables
 
 #config spgw
-RUN sed -i 's/PGW_MASQUERADE_SGI                    = "no";/PGW_MASQUERADE_SGI                    = "yes";/g' /usr/local/etc/oai/spgw.conf
-RUN sed -i 's/UE_TCP_MSS_CLAMPING                   = "no";/UE_TCP_MSS_CLAMPING                   = "yes";/g' /usr/local/etc/oai/spgw.conf
-RUN sed -i 's/PGW_INTERFACE_NAME_FOR_SGI            = "eth3";/PGW_INTERFACE_NAME_FOR_SGI            = "eth0";/g' /usr/local/etc/oai/spgw.conf
-RUN sed -i 's/SGW_INTERFACE_NAME_FOR_S11              = "lo";/SGW_INTERFACE_NAME_FOR_S11              = "eth0";/g' /usr/local/etc/oai/spgw.conf
-RUN sed -i 's/SGW_IPV4_ADDRESS_FOR_S11                = "127.0.11.2\/8";/SGW_IPV4_ADDRESS_FOR_S11                = "172.18.0.4\/16";/g' /usr/local/etc/oai/spgw.conf
-RUN sed -i 's/SGW_IPV4_ADDRESS_FOR_S1U_S12_S4_UP      = "192.168.11.17\/24";/SGW_IPV4_ADDRESS_FOR_S1U_S12_S4_UP      = "172.18.0.4\/16";/g' /usr/local/etc/oai/spgw.conf
+RUN sed -i 's/PGW_MASQUERADE_SGI[ \t]*= "no";/PGW_MASQUERADE_SGI                    = "yes";/g' /usr/local/etc/oai/spgw.conf
+RUN sed -i 's/UE_TCP_MSS_CLAMPING[ \t]*= "no";/UE_TCP_MSS_CLAMPING                   = "yes";/g' /usr/local/etc/oai/spgw.conf
+RUN sed -i 's/PGW_INTERFACE_NAME_FOR_SGI[ \t]*= "eth3";/PGW_INTERFACE_NAME_FOR_SGI            = "eth0";/g' /usr/local/etc/oai/spgw.conf
+RUN sed -i 's/SGW_INTERFACE_NAME_FOR_S11[ \t]*= "lo";/SGW_INTERFACE_NAME_FOR_S11              = "eth0";/g' /usr/local/etc/oai/spgw.conf
+RUN sed -i 's/SGW_IPV4_ADDRESS_FOR_S11[ \t]*= "127.0.11.2\/8";/SGW_IPV4_ADDRESS_FOR_S11                = "172.18.0.4\/16";/g' /usr/local/etc/oai/spgw.conf
+RUN sed -i 's/SGW_IPV4_ADDRESS_FOR_S1U_S12_S4_UP[ \t]*= "192.168.11.17\/24";/SGW_IPV4_ADDRESS_FOR_S1U_S12_S4_UP      = "172.18.0.4\/16";/g' /usr/local/etc/oai/spgw.conf
 
 RUN apt-get install -y vim
 
