--- a/mme/dockerfile
+++ b/mme/dockerfile
@@ -28,10 +28,10 @@ RUN echo "/RECO/SCRIPTS/check_mme_s6a_certificate /usr/local/etc/oai/freeDiamete
 RUN echo "/RECO/SCRIPTS/run_mme" >> mme.sh
 
 #config network
-RUN sed -i 's/MME_INTERFACE_NAME_FOR_S1_MME         = "ens39";/MME_INTERFACE_NAME_FOR_S1_MME         = "eth0";/g' /usr/local/etc/oai/mme.conf
-RUN sed -i 's/MME_IPV4_ADDRESS_FOR_S1_MME           = "192.188.2.2\/24";/MME_IPV4_ADDRESS_FOR_S1_MME           = "172.18.0.3\/16";/g' /usr/local/etc/oai/mme.conf
-RUN sed -i 's/MME_INTERFACE_NAME_FOR_S11_MME        = "ens37";/MME_INTERFACE_NAME_FOR_S11_MME        = "eth0";/g' /usr/local/etc/oai/mme.conf
-RUN sed -i 's/MME_IPV4_ADDRESS_FOR_S11_MME          = "10.0.0.2\/8";/MME_IPV4_ADDRESS_FOR_S11_MME          = "172.18.0.3\/16";/g' /usr/local/etc/oai/mme.conf
+RUN sed -i 's/MME_INTERFACE_NAME_FOR_S1_MME[ \t]*= "ens39";/MME_INTERFACE_NAME_FOR_S1_MME         = "eth0";/g' /usr/local/etc/oai/mme.conf
+RUN sed -i 's/MME_IPV4_ADDRESS_FOR_S1_MME[ \t]*= "192.188.2.2\/24";/MME_IPV4_ADDRESS_FOR_S1_MME           = "172.18.0.3\/16";/g' /usr/local/etc/oai/mme.conf
+RUN sed -i 's/MME_INTERFACE_NAME_FOR_S11_MME[ \t]*= "ens37";/MME_INTERFACE_NAME_FOR_S11_MME        = "eth0";/g' /usr/local/etc/oai/mme.conf
+RUN sed -i 's/MME_IPV4_ADDRESS_FOR_S11_MME[ \t]*= "10.0.0.2\/8";/MME_IPV4_ADDRESS_FOR_S11_MME          = "172.18.0.3\/16";/g' /usr/local/etc/oai/mme.conf
 RUN sed -i 's/SGW_IPV4_ADDRESS_FOR_S11="10.0.0.3\/8";}/SGW_IPV4_ADDRESS_FOR_S11="172.18.0.4\/8";}/g' /usr/local/etc/oai/mme.conf
 RUN sed -i 's/ConnectPeer= "hss.openair4G.eur" { ConnectTo = "127.0.0.1";/ConnectPeer= "hss.openair4G.eur" { ConnectTo = "172.18.0.2";/g' /usr/local/etc/oai/freeDiameter/mme_fd.conf
 
